@@ -87,7 +87,7 @@ REPLACE INTO `{PREFIX}site_content` VALUES (33, 'document', 'text/html', 'Gettin
 REPLACE INTO `{PREFIX}site_content` VALUES (37, 'document', 'text/html', '[*loginName*]', 'The page you''re trying to reach requires a login', '', 'blog-login', '', 1, 0, 0, 0, 0, '', '<p>In order to add a blog entry, you must be logged in as a Site Admin webuser. Also, commenting on posts requires a login. <a href="[~6~]">Contact the site owner</a> for permissions to create new post, or <a href="[~5~]">create a web user account</a> to automatically receive commenting privileges. If you already have an account, please login below.</p>\r\n\r\n[!WebLogin? &tpl=`FormLogin` &loginhomeid=`3`!]', 1, 4, 12, 0, 0, 1, 1144904400, 1, 1158599931, 0, 0, 0, 0, 0, '', 0, 0, 0, 0, 0, 0, 1);
 
 
-REPLACE INTO `{PREFIX}site_content` VALUES (39, 'document', 'text/html', 'Template Examples', 'Templates', 'Templates', 'templates', '', 1, 0, 0, 0, 1, '', '<p>This page provides a simple way to explore alternate layouts and stylesheets. To change the overall template, use the first set of links. To alter the stylesheets, use the second set of options.</p>\r\n\r\n<p>In order for the template switcher to work for this demo content with the current caching implementation, caching has to be disabled for the entire site. We''ve accomplished this via a <strong>DisableCache</strong> plugin. This has the effect of slowing down site performance since each page is dynamically generated on every page view. For production, we suggest caching pages when possible.</p>\r\n\r\n<h4>Change Layout Templates:</h4>\r\n[!Wayfinder?startId=`[*id*]` &outerClass=`topnav`!]<br />\r\n\r\n<h4>Switch CSS Themes:</h4>\r\n{{styles}}', 1, 4, 9, 1, 0, 1, 1144904400, 1, 1159978559, 0, 0, 0, 1144628721, 1, 'Templates', 0, 0, 0, 0, 0, 0, 0);
+REPLACE INTO `{PREFIX}site_content` VALUES (39, 'document', 'text/html', 'Template Examples', 'Templates', 'Templates', 'templates', '', 1, 0, 0, 0, 1, '', '<p>This page provides a simple way to explore alternate layouts and stylesheets. To change the overall template, use the first set of links. To alter the stylesheets, use the second set of options.</p>\r\n\r\n<p>In order for the template switcher to work for this demo content with the current caching implementation, caching has to be disabled for the entire site. We''ve accomplished this via the <strong>TemplateSwitcher</strong> plugin. This has the effect of slowing down site performance since each page is dynamically generated on every page view. For production, we suggest caching pages when possible.</p>\r\n\r\n<h4>Change Layout Templates:</h4>\r\n[!Wayfinder?startId=`[*id*]` &outerClass=`topnav`!]<br />\r\n\r\n<h4>Switch CSS Themes:</h4>\r\n{{styles}}', 1, 4, 9, 1, 0, 1, 1144904400, 1, 1159978559, 0, 0, 0, 1144628721, 1, 'Templates', 0, 0, 0, 0, 0, 0, 0);
 
 
 REPLACE INTO `{PREFIX}site_content` VALUES (42, 'reference', 'text/html', 'MODxCSS', 'MODxCSS', 'MODxCSS', 'modxcss_tpl', '', 1, 0, 0, 39, 0, '', 'index.php?id=39&amp;template=MODxCss', 0, 0, 2, 1, 0, 1, 1144904400, 1, 1158505415, 0, 0, 0, 1144967654, 1, 'MODxCSS', 0, 0, 0, 0, 0, 0, 0);
