@@ -40,8 +40,7 @@
 	$mp[] = array("QuickEdit","Front-end Content Editor.",0,"$setupPath/quickedit.plugin.tpl","","OnParseDocument,OnWebPagePrerender","f888bac76e1537ca8e0cbec772b4624a");
 	$mp[] = array("TinyMCE","<strong>2.0.6.1b:</strong> TinyMCE RichText Editor Plugin",0,"$setupPath/plugin.tinymce.tpl","&tinyPlugins=Plugins;text;style,layer,table,advhr,advimage,advlink,emotions,insertdatetime,preview,flash,searchreplace,print,contextmenu,paste,directionality,fullscreen,noneditable &tinyButtons1=Button Row 1;text;newdocument,separator,bold,italic,underline,strikethrough,separator,justifyleft,justifycenter,justifyright,justifyfull,separator,styleselect,formatselect,fontselect,fontsizeselect &tinyButtons2=Button Row 2;text;cut,copy,paste,separator,search,replace,separator,pastetext,pasteword,selectall,separator,bullist,numlist,separator,outdent,indent,separator,undo,redo,separator,link,unlink,anchor,image,separator,cleanup,help,code,separator,insertdate,inserttime,preview,separator,forecolor,backcolor &tinyButtons3=Button Row 3;text;tablecontrols,separator,hr,removeformat,visualaid,separator,sub,sup,separator,charmap,emotions,iespell,flash,advhr,separator,print,separator,ltr,rtl,separator,fullscreen &tinyButtons4=Button Row 4;text;insertlayer,moveforward,movebackward,absolute,separator,styleprops &disabledButtons=Disabled Buttons;text; &tinyFormats=Block Formats;text;p,div,address,pre,h1,h2,h3,h4,h5,h6 &webtheme=Web Theme;list;simple,advanced,full;simple &entity_encoding=Entity Encoding;list;named,numeric,raw;named &entities=Entities;text;","OnRichTextEditorRegister,OnRichTextEditorInit,OnInterfaceSettingsRender");
     $mp[] = array("Search Highlighting","Show search terms highlighted on page linked from search results. (Requires AjaxSearch snippet)",0,"$setupPath/plugin.searchhighlight.tpl","","OnWebPagePrerender");
-    $mp[] = array("DisableCache","Disables the cache for every page (needed for template switcher demo).",0,"$setupPath/plugin.disablecache.tpl","","OnLoadWebDocument");
-    $mp[] = array("TemplateSwitcher","Changes templates used on all pages in your site.",0,"$setupPath/plugin.templateswitcher.tpl","","OnLoadWebDocument");
+    $mp[] = array("TemplateSwitcher","Changes templates used on all pages in your site.",0,"$setupPath/plugin.templateswitcher.tpl","&usecookie=Use Cookie;list;no,yes;no","OnLoadWebDocument");
 
 	# setup modules - array : name, description, type - 0:file or 1:content, file or content,properties, guid,enable_sharedparams
 	$mm = &$moduleModules;
