@@ -325,7 +325,7 @@ function SetUrl(url, width, height, alt){
         <td id="Button3" onclick="deletedocument();"><img src="media/style/<?php echo $manager_theme ? "$manager_theme/":""; ?>images/icons/delete.gif" align="absmiddle"> <?php echo $_lang['delete']; ?></span></td>
             <script type="text/javascript">createButton(document.getElementById("Button3"));</script>
 <?php } ?>
-        <td id="Button4" onclick="document.location.href='index.php?a=106';"><img src="media/style/<?php echo $manager_theme ? "$manager_theme/":""; ?>images/icons/cancel.gif" align="absmiddle"> <?php echo $_lang['cancel']; ?></td>
+        <td id="Button4" onclick="documentDirty=false;document.location.href='index.php?a=106';"><img src="media/style/<?php echo $manager_theme ? "$manager_theme/":""; ?>images/icons/cancel.gif" align="absmiddle"> <?php echo $_lang['cancel']; ?></td>
             <script type="text/javascript">createButton(document.getElementById("Button4"));</script>
         </tr>
     </table>
